--- a/styles/AboutMeStyles.css
+++ b/styles/AboutMeStyles.css
@@ -12,4 +12,54 @@ body, html {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
+
+  }
+
+  .container {
+    width: 100%;
+    position: relative;
+  }
+  
+  .container:after {
+    content: '';
+    display: block;
+    height: 0;
+    clear: both;
+    overflow: hidden;
+  }
+  
+  #img-div {
+    width: 85%;
+    /* 85% width */
+    float: right;
+  }
+  
+  #image {
+    display: block;
+    width: 100%;
+    /* make div stretch size of div */
+  }
+
+  #pagetitle {
+    position:relative;  /* this is for 100% height */
+    top:500; bottom:0;
+    left:0;
+    right:76%;
+    overflow: visible;
+    z-index: 2;
+  }
+  
+  .tag-holder {
+    position: relative;
+  }
+  
+  .tagline {
+
+    white-space: nowrap;
+    font-size: 100px;
+    font-weight: bold;
+    text-transform: uppercase;
+    background: transparent;
+    padding: 0.1em 0.5em;
   }
